Cosmetic changes for documentation and tox.init update

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = examples,flake8,autopep8
+envlist = examples,pep8,autopep8,docs
 
 [testenv]
 basepython = python3
@@ -9,28 +9,44 @@ usedevelop = True
 install_command = pip install {opts} {packages}
 
 [testenv:examples]
+description =
+  Run all python scripts from examples directory - physics check.
 # Env variable MPLBACKEND=Agg prevents display of windows during tests
 deps = -r requirements.txt
 setenv =
   MPLBACKEND=Agg
 commands =
-  python examples/test_Dudley.py
-  python examples/plot_Raman_response.py
-  python examples/test_gvd.py
-  python examples/test_spm.py
-  python examples/test_3rd_order_soliton.py
-  python examples/test_import_export.py
-  python examples/test_spm+gvd.py
+  bash -ex -c 'for FILE in examples/*.py; do python $FILE; done'
 
-[testenv:flake8]
-deps = -r requirements.txt
+[testenv:pep8]
+description =
+  Style guide enforcement with flake8 and doc8.
+deps =
+  -r test-requirements.txt
 commands =
   flake8
+  doc8
 
 [testenv:autopep8]
-deps = -r requirements.txt
+description =
+  Check autopep8 suggestions.
+deps = 
+  -r test-requirements.txt
 commands =
   python -m autopep8 --recursive --aggressive --diff --exit-code .
 
+[doc8]
+ignore = D000,D002,D004
+ignore-path = .venv,.git,.tox,gnlse.egg*,docs/_build
+
 [flake8]
-exclude = .git,.tox
+exclude = .venv,.git,.tox,docs,*egg,build
+
+[testenv:docs]
+description =
+  Build main documentation: html and pdf file.
+deps =
+  -r docs/requirements.txt
+commands =
+  rm -rf docs/_build
+  sphinx-build -W -b html docs docs/_build
