--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib==3.5.1
-numpy==1.22.3
-scipy==1.8.0
-pyfftw==0.13.0
-hdf5storage==0.1.18
-tqdm==4.64.0
+matplotlib>=2.2.2
+numpy>=1.14.3
+scipy>=1.1.0
+pyfftw>=0.10.0
+hdf5storage>=0.1.15
+tqdm>=4.11.2
