--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,18 @@
 name: CI
 
-on: [pull_request]
+on: [push, pull_request]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
     container:
-      image: themattrix/tox
+      image: python:3.10
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2.0.0
-    - name: Tests
-      run: |
+      - name: Packages
+        run: pip install tox
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Tox
+        run: |
+          git config --global --add safe.directory "${GITHUB_WORKSPACE}"
           tox -v
