--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       image: python:3.10
     steps:
       - name: Packages
-        run: pip install tox
+        run: pip install 'tox<4'
       - name: Checkout
         uses: actions/checkout@v3
       - name: Tox
